--- a/_config.yml
+++ b/_config.yml
@@ -26,5 +26,5 @@ adsense_client: ""
 go_defaults:
   strongvpn: ""
   expressvpn: ""
-  purevpn: ""
+  purevpn: "https://billing.purevpn.com/aff.php?aff=49387327"
   surfshark: ""
