--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,14 @@ adsense_enabled: false
 adsense_client: ""
 
 go_defaults:
-  strongvpn: ""
+  strongvpn: "https://strongvpn.com"
   purevpn: "https://billing.purevpn.com/aff.php?aff=49387327"
-  surfshark: ""
+  surfshark: "https://surfshark.com"
+  nordvpn: "https://nordvpn.com"
+  expressvpn: "https://www.expressvpn.com"
+  cyberghost: "https://www.cyberghostvpn.com"
+  pia: "https://www.privateinternetaccess.com"
+  protonvpn: "https://protonvpn.com"
+  mullvad: "https://mullvad.net"
+  atlas: "https://atlasvpn.com"
+  ivacy: "https://www.ivacy.com"
