--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "eleventy --serve --watch",
-    "build": "eleventy"
+    "build": "node -e \"require('fs').rmSync('_site', { recursive: true, force: true })\" && eleventy"
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.1"
